feature(csfr) cookie and endpoint for csfr token
