# src/docs/swagger.json
@@ -234,6 +234,42 @@
                 }
             }
         },
+        "/auth/csrf": {
+            "get": {
+                "security": [
+                    {
+                        "SessionAuth": []
+                    }
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "auth"
+                ],
+                "summary": "Get CSRF token",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/httpapi.CSRFResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/health": {
             "get": {
                 "produces": [
@@ -1094,6 +1130,14 @@
                 },
                 "session_expires_at": {
                     "description": "RFC3339",
+                    "type": "string"
+                }
+            }
+        },
+        "httpapi.CSRFResponse": {
+            "type": "object",
+            "properties": {
+                "csrf_token": {
                     "type": "string"
                 }
             }
